# Zygotrix

./: .gitignore  BACKEND_REFACTORING_PLAN.md  GWAS_IMPLEMENTATION_PLAN.md  GWAS_IMPLEMENTATION_STATUS.md  LICENSE  PATTERN_INTEGRATION_GUIDE.md  README.md  ROUTES_REFACTORING_ANALYSIS.md  SETUP.md  ZYGOTRIX_AI_REFACTORING_PLAN.md  llamaIndex.py  test_breeding_tool.py  test_joint_api.py  test_joint_phenotypes.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  REDIS_SETUP.md  buildspec.yml  config.yml  deploy.sh  docker-compose.yml  install_resend.ps1  install_resend.sh  lambda_handler.py  requirements.txt  seed_mendelian_traits.py  setup_trait_db.py  test_aws_ses.py  test_cpp_integration.py  test_mcp.py  test_tool_calling.py
backend/app/: config.py  dependencies.py  main.py  schemas.py  services.py  utils.py
backend/app/chatbot_tools/: __init__.py  gwas_tools.py  tools.py
backend/app/cms/: hygraph_queries.py
backend/app/core/: container.py  logging_config.py  performance.py
backend/app/infrastructure/: __init__.py
backend/app/integrations/: __init__.py  hygraph_client.py
backend/app/mcp/: __init__.py  claude_tools.py
backend/app/models/: __init__.py  assessment.py  mendelian_calculator.py  polygenic_calculator.py  progress.py  prompt_template.py  simulator.py  trait.py
backend/app/prompt_engineering/: __init__.py  prompts.py
backend/app/repositories/: __init__.py  assessment_repository.py  course_repository.py  gwas_dataset_repository.py  gwas_job_repository.py  gwas_result_repository.py  progress_repository.py  prompt_repository.py  trait_repository.py
backend/app/routes/: admin.py  analytics.py  auth.py  chatbot.py  community.py  contact.py  cpp_engine.py  data_import.py  deep_research.py  dna_generator.py  gwas.py  mendelian.py  newsletter.py  pedigree.py  pgs_demo.py  population.py  portal.py  preview.py  project_templates.py  projects.py  protein_generator.py  scholar_analytics.py  traits.py  university.py  web_search.py  zygotrix_ai.py
backend/app/schema/: analytics.py  auth.py  chatbot_settings.py  common.py  community.py  contact.py  cpp_engine.py  data_import.py  dna_generator.py  gwas.py  mendelian.py  newsletter.py  pedigree.py  pgs_demo.py  polygenic.py  population.py  preview.py  projects.py  protein_generator.py  traits.py  university.py  zygotrix_ai.py
backend/app/serializers/: __init__.py  base_serializer.py  community_serializer.py  serializers.py  trait_serializer.py
backend/app/services/: __init__.py  admin.py  analytics.py  assessment_service.py  auth.py  aws_worker_client.py  base.py  chatbot_settings.py  cloud_storage.py  common.py  community.py  contact.py  course_service.py  cpp_engine.py  dashboard_service.py  data_import.py  dna_generator.py  email_service.py  gwas_analysis_service.py  gwas_dataset.py  gwas_dataset_service.py  gwas_engine.py  gwas_file_parser.py  gwas_storage.py  gwas_visualization.py  mendelian.py  newsletter.py  notifications.py  pedigree_agent.py  pgs_demo.py  polygenic.py  population.py  progress_service.py  project_tools.py  projects.py  prompt_service.py  protein_generator.py  protein_generator_impl.py  sequence_queue.py  service_factory.py  (+7 more)
backend/app/utils/: redis_client.py  trait_helpers.py
backend/data/: allele_freqs.json  traits_dataset.json
backend/logs/: README.md
backend/tests/: conftest.py  test_api.py  test_mendelian_traits.py
docs/: IMPLEMENTATION_LEVELS.md  MENDELIAN_TRAITS.md  api-reference.md  mendelian-traits-guide.md  trait-management-examples.md
examples/: traits_example.json
marketing-site/: package-lock.json  package.json  tailwind.config.ts
marketing-site/public/: robots.txt  sitemap.xml
web/: .env.example  .gitignore  electron-builder.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.electron.json  vite.config.ts
web/electron/: main.ts  preload.ts
web/public/: robots.txt  sitemap.xml
web/src/: App.tsx  index.css  main.tsx
zygotrix-ai-site/: package-lock.json  package.json
zygotrix-ai-site/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
zygotrix_ai/: .env.example  GWAS_INTEGRATION_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js
zygotrix_ai/public/: robots.txt  sitemap.xml
zygotrix_ai/src/: App.tsx  index.css
zygotrix_docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
zygotrix_docs/docs/: intro.md
zygotrix_engine/: README.md  __init__.py  pyproject.toml
zygotrix_engine/tests/: test_mendelian.py
zygotrix_engine/zygotrix_engine/: __init__.py  mendelian.py  polygenic.py  simulator.py  traits.py  utils.py
zygotrix_engine_cpp/: CMakeLists.txt  GWAS_BUILD_INSTRUCTIONS.md  README.md
zygotrix_engine_cpp/examples/: demo.cpp  dna_generator_demo.cpp  test_mendelian.cpp
zygotrix_engine_cpp/include/: DnaGenerator.hpp
zygotrix_engine_cpp/include/gwas/: ChiSquareTest.hpp  GwasAnalyzer.hpp  GwasTypes.hpp  LinearRegression.hpp
zygotrix_engine_cpp/include/zygotrix/: DominanceStrategy.hpp  Engine.hpp  ExactCalculatorStrategy.hpp  GameteGenerator.hpp  GenotypeNormalizer.hpp  GenotypeUtils.hpp  ICrossCalculator.hpp  JsonRequestBuilder.hpp  MendelianCalculator.hpp  PhenotypeModifier.hpp  SimulationCalculatorStrategy.hpp
zygotrix_engine_cpp/src/: AminoProperties.hpp  CrossCli.cpp  DnaGenerator.cpp  DnaGenerator.hpp  DnaGeneratorCli.cpp  DnaTranscription.hpp  DominanceStrategy.cpp  Engine.cpp  ExactCalculatorStrategy.cpp  GameteGenerator.cpp  GeneticCode.hpp  GenotypeNormalizer.cpp  GenotypeUtils.cpp  GwasCli.cpp  JsonRequestBuilder.cpp  MendelianCalculator.cpp  ParallelDnaGenerator.cpp  ParallelDnaGenerator.hpp  ParallelDnaGeneratorCli.cpp  ParallelOrfFinder.cpp  ParallelOrfFinder.hpp  PhenotypeModifier.cpp  Protein.hpp  ProteinGeneratorCli.cpp  SimulationCalculatorStrategy.cpp  ThreadPool.cpp  ThreadPool.hpp  main.cpp
zygotrix_engine_cpp/src/gwas/: ChiSquareTest.cpp  GwasAnalyzer.cpp  LinearRegression.cpp
zygotrix_university/: index.html  package-lock.json  package.json
zygotrix_university/src/: App.tsx  index.css  main.tsx
(+669 files in other folders)
