[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zygotrix-engine"
version = "0.1.0"
description = "Genetics toolkit for Mendelian and polygenic simulations."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Zygotrix" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://example.com/zygotrix"
Repository = "https://example.com/zygotrix/repo"

[tool.setuptools.packages.find]
where = ["."]
include = ["zygotrix_engine*"]